# nom-derive

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  UPGRADING.md
.github/workflows/: rust.yml
nom-derive-impl/: Cargo.toml
nom-derive-impl/src/: config.rs  endian.rs  enums.rs  gen.rs  lib.rs  parsertree.rs  structs.rs
nom-derive-impl/src/meta/: attr.rs  attr_list.rs  mod.rs
src/: config.rs  docs.rs  enums.rs  helpers.rs  lib.rs  meta.rs  parsertree.rs  structs.rs  traits.rs  unions.rs
src/meta/: attr.rs  attr_list.rs  error.rs  mod.rs
tests/: compile_tests.rs  complex.rs  debug.rs  endianness.rs  enums.rs  lifetimes.rs  multiple.rs  raw_identifier.rs  simple.rs  structured.rs  unions.rs
tests/compile-fail/: could-not-infer.rs  could-not-infer.stderr  endianness-multiple.rs  endianness-multiple.stderr  error-enums.rs  error-enums.stderr  invalid-cond.rs  invalid-cond.stderr  invalid-count.rs  invalid-count.stderr  invalid_attribute.rs  invalid_attribute.stderr  unsupported_types.rs  unsupported_types.stderr
tests/run-pass/: array.rs  complete-streaming.rs  custom-errors-enum.rs  custom-errors.rs  endianness.rs  enum-fieldless.rs  extra-args.rs  generics.rs  into.rs  nested-attributes.rs  strings.rs  struct01.rs
