[package]
name = "nom-derive"
description = "Custom derive nom parsers from struct"
version = "0.4.0"
license = "MIT/Apache-2.0"
keywords = ["parser","nom"]
categories = ["parsing"]
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
homepage = "https://github.com/rust-bakery/nom-derive"
repository = "https://github.com/rust-bakery/nom-derive.git"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
# syn = { version="0.15", features=["parsing","extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
nom = "5.0"
pretty_assertions = "0.6.0"
