[package]
name = "nom-derive"
description = "Custom derive nom parsers from struct"
version = "0.6.1"
license = "MIT/Apache-2.0"
keywords = ["parser","nom"]
categories = ["parsing"]
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
homepage = "https://github.com/rust-bakery/nom-derive"
repository = "https://github.com/rust-bakery/nom-derive.git"
readme = "README.md"
edition = "2018"

include = [
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
  "src/meta/*.rs",
  "tests/*.rs",
]

[lib]
proc-macro = true

[dependencies]
# syn = "1.0"
syn = { version="1.0", features=["parsing","extra-traits","full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nom = "5.0"
pretty_assertions = "0.6.0"
